--- a/hugo.toml
+++ b/hugo.toml
@@ -8,12 +8,12 @@ pygmentsstyle = "monokai"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
-disqusShortname = "yourDisqusShortname"
+#disqusShortname = "yourDisqusShortname"
 
 paginate=2 # articles per page
 
 [params]
-	mode="auto" # color-mode → light,dark,toggle or auto
+	mode="dark" # color-mode → light,dark,toggle or auto
 	useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
 	subtitle = "write-ups for my [threat hunting content](https://www.youtube.com/channel/UCtwchzdOYHiXai5BxXPiHMg)"
 	mathjax = true # enable MathJax support
@@ -46,14 +46,16 @@ url = "/"
 weight = 1
 
 [[menu.main]]
-name = "All posts"
-url = "/posts"
+name = "About"
+url = "/about"
 weight = 2
 
 [[menu.main]]
-name = "About"
-url = "/about"
+name = "Posts"
+url = "/posts"
 weight = 3
+
+
 
 [[menu.main]]
 name = "Tags"
