--- a/hugo.toml
+++ b/hugo.toml
@@ -15,7 +15,7 @@ paginate=2 # articles per page
 [params]
 	mode="dark" # color-mode → light,dark,toggle or auto
 	useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
-	subtitle = "[content on threat hunting + memory forensics](https://www.youtube.com/channel/UCtwchzdOYHiXai5BxXPiHMg)"
+	subtitle = "[content on threat hunting + active defense + deception](https://www.youtube.com/channel/UCtwchzdOYHiXai5BxXPiHMg)"
 	mathjax = true # enable MathJax support
 	katex = true # enable KaTeX support
 	favicon = "/favicon.ico"
