--- a/hugo.toml
+++ b/hugo.toml
@@ -20,6 +20,7 @@ paginate=3 # articles per page
 	katex = true # enable KaTeX support
 	favicon = "/favicon.ico"
 
+mainSections = ["post"]
 
 # Social Tags
 
