--- a/hugo.toml
+++ b/hugo.toml
@@ -15,7 +15,7 @@ paginate=3 # articles per page
 [params]
 	mode="dark" # color-mode → light,dark,toggle or auto
 	useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
-	subtitle = "[| threat hunting c2 | deception | dank memez |](https://www.youtube.com/channel/UCtwchzdOYHiXai5BxXPiHMg)"
+	subtitle = "[| threat hunting | deception | dank memez |](https://www.youtube.com/channel/UCtwchzdOYHiXai5BxXPiHMg)"
 	mathjax = true # enable MathJax support
 	katex = true # enable KaTeX support
 	favicon = "/favicon.ico"
