adding some pages

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://faanross.com/'
+baseURL = 'https://www.faanross.com/'
 languageCode = 'en-us'
 title = 'Faan Rossouw'
 theme = 'gokarna'
