--- a/hugo.toml
+++ b/hugo.toml
@@ -15,20 +15,16 @@ theme = 'gokarna'
     url = "/page/guides/"
     weight = 2
 
-  [[menu.main]]
-    name = "posts"
-    url = "/posts/"
-    weight = 3
 
   [[menu.main]]
     name = "projects"
     url = "/projects/"
-    weight = 4
+    weight = 3
 
   [[menu.main]]
     name = "about"
     url = "/about/"
-    weight = 5
+    weight = 4
     
 
 
@@ -48,6 +44,14 @@ theme = 'gokarna'
 
     pre = "<span data-feather='youtube'></span>"
     post = ""
+
+[[menu.main]]
+identifier = "slack"
+url = "https://faanrossmaldev.slack.com"
+weight = 10
+
+pre = "<span data-feather='slack'></span>"
+post = ""
 
 
 
