--- a/themes/gokarna/config.toml
+++ b/themes/gokarna/config.toml
@@ -50,14 +50,15 @@ theme = "gokarna"
   # Incompatible with Weight
   togglePreviousAndNextButtons = "false"
 
-  customHeadHTML = """
-    <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="favicon-32x32" sizes="32x32" href="/favicon-32x32.png">
-    </head>
-
- 
-  """
+CustomHeadHTML = """
+    <script>
+        (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+        .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+        n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+        (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+        ml('account', '1462037');
+    </script>
+    """
 
 
 
