--- a/themes/gokarna/config.toml
+++ b/themes/gokarna/config.toml
@@ -23,6 +23,16 @@ theme = "gokarna"
   # Choose the color shown when hyperlinks are hovered over
   accentColor = "#eb89f4"
 
+customHeadHTML = """
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    """
+
   # Resource URL for the site avatar (home page and header)
   avatarURL = "/images/firestarter.png"
   avatarAltText = "firestarter"
