--- a/hugo.toml
+++ b/hugo.toml
@@ -21,26 +21,31 @@ theme = 'gokarna'
     url = "/guides/"
     weight = 2
 
+[[menu.main]]
+name = "malware"
+url = "/malware/"
+weight = 3
+
 
   [[menu.main]]
     name = "projects"
     url = "/projects/"
-    weight = 3
+    weight = 4
 
 [[menu.main]]
 name = "articles"
 url = "/articles/"
-weight = 4
+weight = 5
 
 [[menu.main]]
 name = "talks"
 url = "/talks/"
-weight = 5
+weight = 6
 
   [[menu.main]]
     name = "about"
     url = "/about/"
-    weight = 6
+    weight = 7
 
 
 
