--- a/hugo.toml
+++ b/hugo.toml
@@ -64,7 +64,7 @@ weight = 5
 
 [[menu.main]]
 identifier = "discord"
-url = "https://discord.com/invite/PwdnvDcC"
+url = "https://discord.gg/fdDPBnEC"
 weight = 9
 pre = """<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather"><path d="M8 12a1 1 0 1 0 2 0a1 1 0 0 0 -2 0"></path><path d="M14 12a1 1 0 1 0 2 0a1 1 0 0 0 -2 0"></path><path d="M15.5 17c0 1 1.5 3 2 3c1.5 0 2.833 -1.667 3.5 -3c.667 -1.667 .5 -5.833 -1.5 -11.5c-1.457 -1.015 -3 -1.34 -4.5 -1.5l-.972 1.923a11.9 11.9 0 0 0 -4.053 0l-.975 -1.923c-1.5 .16 -3.043 .485 -4.5 1.5c-2 5.667 -2.167 9.833 -1.5 11.5c.667 1.333 2 3 3.5 3c.5 0 2 -2 2 -3"></path><path d="M7 16.5c-1.5 1 -2.5 2.5 -2.5 4.5"></path><path d="M17 16.5c1.5 1 2.5 2.5 2.5 4.5"></path></svg>"""
 post = ""
