--- a/themes/gokarna/config.toml
+++ b/themes/gokarna/config.toml
@@ -47,7 +47,7 @@ customHeadHTML = """
   dateFormat = "January 2, 2006"
   
   # Home page meta description
-  description = "| gnostic explorations in malware |"
+  description = "| gnostic explorations in malware development |"
 
   # Footer text (i.e. author/project name)
   footer = "faan rossouw"
