--- a/hugo.toml
+++ b/hugo.toml
@@ -64,7 +64,7 @@ weight = 3
 
   [[menu.main]]
     identifier = "linkedin"
-    url = "www.linkedin.com/in/faan-rossouw"
+    url = "https://www.linkedin.com/in/faan-rossouw"
     weight = 10
     pre = "<span data-feather='linkedin'></span>"
     post = ""
