--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://www.faanross.com/'
 languageCode = 'en-us'
-title = 'Faan Rossouw'
+title = 'Faan Rossouw - Agentic Threat Hunting Expert'
 theme = 'gokarna'
 
 [markup]
