--- a/hugo.toml
+++ b/hugo.toml
@@ -11,10 +11,17 @@ theme = 'gokarna'
 
 [menu]
 
+
+  [[menu.main]]
+    name = "aionsec"
+    url = "https://www.aionsec.ai"
+    weight = 1
+
+
   [[menu.main]]
     name = "courses"
     url = "/courses/"
-    weight = 1
+    weight = 2
 
 
 
@@ -22,17 +29,17 @@ theme = 'gokarna'
 [[menu.main]]
 name = "articles"
 url = "/articles/"
-weight = 2
+weight = 3
 
 [[menu.main]]
 name = "talks"
 url = "/talks/"
-weight = 3
+weight = 4
 
   [[menu.main]]
     name = "about"
     url = "/about/"
-    weight = 4
+    weight = 5
 
 
 
