--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
+		"@duckdb/duckdb-wasm": "^1.33.1-dev18.0",
+		"layercake": "^10.0.2",
 		"mdsvex": "^0.12.6",
 		"shiki": "^3.21.0"
 	}
